--- a/Index.html
+++ b/Index.html
@@ -7,15 +7,19 @@
   <body>
     <pre>Hello,
 
-      Thank you for taking the time to learn more about our product
-      </pre><strong>Dig it soldiers</strong><pre>, is like all indie games that exist, a 2d platformer
-      that has cute sound effects and quirky visuals. But with our game the
-      mechinisms that you utilizes are completely different. Take a listen to one of the hundreds
-      of you unique sound effects found in our game.
+      Thank you for taking the time to learn more about our product <strong>Dig it soldiers</strong>, is like all indie games that exist, a 2d platformer
+      that has cute sound effects and quirky visuals. But with our game the mechinisms that you utilizes are completely different. Take a listen to one
+      of the hundreds of you unique sound effects found in our game.
     </pre>
+    <audio controls
+      src="http://yourlisten.com/ninjagangsta/website-wav"
+        autoplay>
+          Your browser does not support the <code>audio</code> element.
+</audio>
 
-    <audio controls rc="http://yourlisten.com/ninjagangsta/win-sound-effect">
-
-    </audio>
+<audio controls="controls">
+  Your browser does not support the <code>audio</code> element.
+  <source src="foo.wav" type="audio/wav">
+</audio>
   </body>
 </html>
