Upload of file and sound

--- a/Index.html
+++ b/Index.html
@@ -12,14 +12,11 @@
       of the hundreds of you unique sound effects found in our game.
     </pre>
     <audio controls
-      src="http://yourlisten.com/ninjagangsta/website-wav"
+      src="https://drive.google.com/file/d/0B5zutqbWTgKUUWw5TkVnQ3hiQmc/view?usp=sharing"
         autoplay>
           Your browser does not support the <code>audio</code> element.
 </audio>
 
-<audio controls="controls">
-  Your browser does not support the <code>audio</code> element.
-  <source src="foo.wav" type="audio/wav">
-</audio>
+
   </body>
 </html>
